--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
 <body>
     <div class="container">
         <header>
-            <h1>🔧 Plexdev - Patcher</h1>
+            <h1>Plexdev - Patcher</h1>
             <p class="subtitle">Utility Tools for PlexDevelopment Products</p>
-            <p class="author">Community Member & Moderator Tools</p>
+            <p class="author">By bali0531</p>
         </header>
 
         <main>
             <section class="patch-card">
                 <div class="card-header">
-                    <h2>📊 Dashboard Database Fixer</h2>
+                    <h2>Dashboard Database Fixer</h2>
                     <span class="badge">Patch #1</span>
                 </div>
                 
@@ -41,7 +41,7 @@
                             <small>Example: mongodb://localhost:27017/plexdev or mongodb+srv://user:pass@cluster.mongodb.net/dbname</small>
                         </div>
                         <button id="connectBtn" class="btn btn-primary">
-                            <span class="btn-icon">🔌</span> Connect to Database
+                            <span class="btn-icon"></span> Connect to Database
                         </button>
                         <div id="connectionStatus" class="status-message"></div>
                     </div>
@@ -86,7 +86,7 @@
                             </div>
 
                             <button id="saveBtn" class="btn btn-success">
-                                <span class="btn-icon">💾</span> Save Changes
+                                <span class="btn-icon"></span> Save Changes
                             </button>
                             <div id="saveStatus" class="status-message"></div>
                         </div>
